Refactor RoomType enum and update date fields in HotelBooking and Flight models to use LocalDate